model RefreshToken {
  userId    String
  token     String   @id
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([token, userId])
}

model ResetPasswordCode {
  id        String   @id @default(uuid())
  code      String
  userId    String   @unique
  expiredAt DateTime @db.Timestamp(6)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([userId, code])
}
